# hcfa-1500-reader

./: .gitignore  README.md  pyproject.toml
docs/: HCFA_OSS_WORKPLAN.md  finetune-deploy-brief.md  hf_dataset_card.md
examples/: manifest.jsonl
examples/clean_scan/: 00001.json  00007.json
examples/fax/: 00003.json  00009.json
examples/phone_photo/: 00004.json  00010.json
examples/pristine/: 00000.json  00006.json
examples/worn_scan/: 00002.json  00008.json
examples/worst/: 00005.json  00011.json
hcfa_eval/: __init__.py  __main__.py  cli.py  dataset.py  normalize.py  schema.py  scoring.py  splits.py
hcfa_synth/: __init__.py  __main__.py  augment.py  format_for_vlm.py  ground_truth.py  npi.py  pdf_fill.py  pipeline.py  records.py  regions.py  render.py
hcfa_synth/codes/: __init__.py  hcpcs_sample.csv  icd10_sample.csv  pos_codes.csv
notebooks/: finetune_qwen2_5_vl_7b_hcfa_bottom.ipynb  finetune_qwen2_5_vl_7b_hcfa_service.ipynb  finetune_qwen2_5_vl_7b_hcfa_top.ipynb  finetune_qwen2_5_vl_hcfa.ipynb
scripts/: build_and_push_hf.py
serving/: README.md  modal_app.py  score_samples.py  scoring_runs.csv
splits/full/: test.jsonl  train.jsonl  val.jsonl
tests/: test_augment.py  test_eval.py  test_format_for_vlm.py  test_ground_truth.py  test_npi.py  test_pdf_fill.py  test_pipeline.py  test_records.py  test_render.py  test_scoring_summary.py
